--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-  <link rel="icon" href="Assets/Logo.png">
+  <link rel="icon" href="Assets/Logo_mini.png">
 </head>
 
 <body>
 
   <div>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark border-3 border-bottom border-primary fw-normal">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark  fw-normal">
       <div class="container">
         <a class="navbar-brand" href="#">
           <img src="./Assets/Logo.png" alt="JC supply" width="" height="40">
@@ -47,22 +47,27 @@
     </nav>
   </div>
 
-  <div class="contenedor">
+  <div class="contenedor-carrucel">
     <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 3"></button>
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="5000">
-          <img src="Assets/baner de prueba 1.jpg" class="d-block w-100" alt="...">
+          <img src="Assets/baner de prueba 5.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="2000">
+          <img src="Assets/baner de prueba 3.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
           <img src="Assets/baner de prueba 2.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="Assets/baner de prueba 3.jpg" class="d-block w-100" alt="...">
+          <img src="Assets/baner de prueba 4.jpg" class="d-block w-100" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
@@ -75,57 +80,90 @@
       </button>
     </div>
   </div>
-<main class="contenedor">
-  <div class="brand">
-    <div class="brands">
-      <img src="Assets/brand_1.jpg" alt="">
+  <main class="contenedor">
+    <div class="brands_container">
+      <div class="brand_text">
+        <h2>Our Brands</h2>
+      </div>
+      <div class="brands">
+        <div class="brand">
+          <img src="Assets/brand_1.jpg" alt="">
+        </div>
+        <div class="brand">
+          <img src="Assets/brand_2.png" alt="">
+        </div>
+        <div class="brand">
+          <img src="Assets/brand_3.png" alt="">
+        </div>
+        <div class="brand">
+          <img src="Assets/brand_4.jpg" alt="">
+        </div>
+        <div class="brand">
+          <img src="Assets/brand_5.jpg" alt="">
+        </div>
+        <div class="brand">
+          <img src="Assets/brand_6.png" alt="">
+        </div>
+        <div class="brand">
+          <img src="Assets/brand_7.jpg" alt="">
+        </div>
+        <div class="brand">
+          <img src="Assets/brand_8.jpg" alt="">
+        </div>
+        <div class="brand">
+          <img src="Assets/brand_10.jpg" alt="">
+        </div>
+        <div class="brand">
+          <img src="Assets/brand_11.jfif" alt="">
+        </div>
+        <div class="brand">
+          <img src="Assets/brand_12.png" alt="">
+        </div>
+      </div>
+      <div class="brand_text">
+        <h2>Our Beauty Brands</h2>
+      </div>
+      <div class="brands">
+        <div class="brand">
+          <img src="Assets/brand_b_1.jpg" alt="">
+        </div>
+        <div class="brand">
+          <img src="Assets/brand_b_2.jpg" alt="">
+        </div>
+        <div class="brand">
+          <img src="Assets/brand_b_3.jpg" alt="">
+        </div>
+        <div class="brand">
+          <img src="Assets/brand_b_5.png" alt="">
+        </div>
+        <div class="brand">
+          <img src="Assets/brand_b_6.jpg" alt="">
+        </div>
+      </div>
     </div>
-    <div class="brands">
-      <img src="Assets/brand_2.png" alt="">
+    
+    <div class="brands_container">
+      
     </div>
-    <div class="brands">
-      <img src="Assets/brand_3.png" alt="">
-    </div>
-    <div class="brands">
-      <img src="Assets/brand_4.jpg" alt="">
-    </div>
-    <div class="brands">
-      <img src="Assets/brand_5.jpg" alt="">
-    </div>
-    <div class="brands">
-      <img src="Assets/brand_6.png" alt="">
-    </div>
-    <div class="brands">
-      <img src="Assets/brand_7.jpg" alt="">
-    </div>
-    <div class="brands">
-       <img src="Assets/brand_8.jpg" alt="">
-    </div>
-    <!-- <div class="brands">
-      <img src="Assets/brand_9.png" alt="">
-    </div> -->
-    <div class="brands">
-      <img src="Assets/brand_10.jpg" alt="">
-    </div>
-    <div class="brands">
-      <img src="Assets/brand_11.jfif" alt="">
-    </div>
-    <div class="brands">
-      <img src="Assets/brand_12.png" alt="">
-    </div>
-    <div class="brands">
-      <img src="Assets/brand_13.jpg" alt="">
-    </div>
-  </div>
 
-  <section class="aboutus">
-    Sobre nosotros
-  </section>
+    <section class="aboutus">
+      <div class="aboutus_content">
+        <div class="aboutus_item">
+          <i class="bi bi-telephone"></i>
+          <div class="about_text">
+            <h3>Give Us A Call</h3>
+            <p>+(xxx) xxxx-xxxx</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
-  <section class="contactus">
-    contactanos
-  </section>
-</main>
+    <section class="contactus">
+      contactanos
+    </section>
+  </main>
+
+
   <footer>
     <div>
       <h3>Follow Us</h3>
