--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
 <body>
 
-  <div>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark  fw-normal">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark  fw-normal">
       <div class="container">
         <a class="navbar-brand" href="#">
           <img src="./Assets/Logo.png" alt="JC supply" width="" height="40">
@@ -45,8 +44,6 @@
         </div>
       </div>
     </nav>
-  </div>
-
   <div class="contenedor-carrucel">
     <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
@@ -58,13 +55,13 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="5000">
-          <img src="Assets/baner de prueba 5.jpg" class="d-block w-100" alt="...">
+          <img src="Assets/baner de prueba 5.jpg" class="d-block w-100 banner-img" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <img src="Assets/baner de prueba 3.jpg" class="d-block w-100" alt="...">
+          <img src="Assets/baner de prueba 3.jpg" class="d-block w-100 banner-img" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="Assets/baner de prueba 2.jpg" class="d-block w-100" alt="...">
+          <img src="Assets/baner de prueba 2.jpg" class="d-block w-100 banner-img" alt="...">
         </div>
         <div class="carousel-item">
           <img src="Assets/baner de prueba 4.jpg" class="d-block w-100" alt="...">
@@ -80,6 +77,8 @@
       </button>
     </div>
   </div>
+ 
+ 
   <main class="contenedor">
     <div class="brands_container">
       <div class="brand_text">
@@ -93,7 +92,7 @@
           <img src="Assets/brand_2.png" alt="">
         </div>
         <div class="brand">
-          <img src="Assets/brand_3.png" alt="">
+          <img src="Assets/brand_3.jpeg" alt="">
         </div>
         <div class="brand">
           <img src="Assets/brand_4.jpg" alt="">
