--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <img src="Assets/baner de prueba 2.jpg" class="d-block w-100 banner-img" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="Assets/baner de prueba 4.jpg" class="d-block w-100" alt="...">
+          <img src="Assets/baner de prueba 4.jpg" class="d-block w-100 banner-img" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
