--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="5000">
-          <img src="Assets/baner de prueba 5.jpg" class="d-block w-100 banner-img" alt="...">
+          <img src="Assets/ArchivoPortadasJcSuply1.jpg" class="d-block w-100 banner_img" alt="...">
         </div>
-        <div class="carousel-item" data-bs-interval="2000">
-          <img src="Assets/baner de prueba 3.jpg" class="d-block w-100 banner-img" alt="...">
+        <!-- <div class="carousel-item" data-bs-interval="2000">
+          <img src="Assets/prueba.jpg" class="d-block w-100 banner-img" alt="...">
         </div>
         <div class="carousel-item">
           <img src="Assets/baner de prueba 2.jpg" class="d-block w-100 banner-img" alt="...">
         </div>
         <div class="carousel-item">
           <img src="Assets/baner de prueba 4.jpg" class="d-block w-100 banner-img" alt="...">
-        </div>
+        </div> -->
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -110,6 +110,9 @@
           <img src="Assets/brand_8.jpg" alt="">
         </div>
         <div class="brand">
+          <img src="Assets/brand_9.jfif" alt="">
+        </div>
+        <div class="brand">
           <img src="Assets/brand_10.jpg" alt="">
         </div>
         <div class="brand">
@@ -117,6 +120,21 @@
         </div>
         <div class="brand">
           <img src="Assets/brand_12.png" alt="">
+        </div>
+        <div class="brand">
+          <img src="Assets/brand_13.jpg" alt="">
+        </div>
+        <div class="brand">
+          <img src="Assets/brand_14.jpg" alt="">
+        </div>
+        <div class="brand">
+          <img src="Assets/brand_15.jpg" alt="">
+        </div>
+        <div class="brand">
+          <img src="Assets/brand_16.jpg" alt="">
+        </div>
+        <div class="brand">
+          <img src="Assets/brand_17.jfif" alt="">
         </div>
       </div>
       <div class="brand_text">
@@ -133,10 +151,19 @@
           <img src="Assets/brand_b_3.jpg" alt="">
         </div>
         <div class="brand">
+          <img src="Assets/brand_b_4.jpg" alt="">
+        </div>
+        <div class="brand">
           <img src="Assets/brand_b_5.png" alt="">
         </div>
         <div class="brand">
           <img src="Assets/brand_b_6.jpg" alt="">
+        </div>
+        <div class="brand">
+          <img src="Assets/brand_b_7.jpg" alt="">
+        </div>
+        <div class="brand">
+          <img src="Assets/brand_b_8.jpg" alt="">
         </div>
       </div>
     </div>
