--- a/index.html
+++ b/index.html
@@ -15,35 +15,35 @@
 
 <body>
 
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark  fw-normal">
-      <div class="container">
-        <a class="navbar-brand" href="#">
-          <img src="./Assets/Logo.png" alt="JC supply" width="" height="40">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark  fw-normal">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <img src="./Assets/Logo.png" alt="JC supply" width="" height="40">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <div class="mx-auto"></div>
-          <ul class="navbar-nav">
-            <li class="nav-item ">
-              <a class="nav-link active text-white" aria-current="page" href="#portada">Home</a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link text-white active" aria-current="page" href="#brands">Brands</a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link text-white active" aria-current="page" href="#aboutus">About Us</a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link text-white active" aria-current="page" href="#contactus">Contact Us</a>
-            </li>
-          </ul>
-        </div>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="mx-auto"></div>
+        <ul class="navbar-nav">
+          <li class="nav-item ">
+            <a class="nav-link active text-white" aria-current="page" href="#portada">Home</a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link text-white active" aria-current="page" href="#brands">Brands</a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link text-white active" aria-current="page" href="#aboutus">About Us</a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link text-white active" aria-current="page" href="#contactus">Contact Us</a>
+          </li>
+        </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
   <div class="contenedor-carrucel">
     <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
@@ -77,8 +77,8 @@
       </button>
     </div>
   </div>
- 
- 
+
+
   <main class="contenedor">
     <div class="brands_container">
       <div class="brand_text">
@@ -167,18 +167,43 @@
         </div>
       </div>
     </div>
-    
-    <div class="brands_container">
-      
-    </div>
 
-    <section class="aboutus">
-      <div class="aboutus_content">
-        <div class="aboutus_item">
-          <i class="bi bi-telephone"></i>
-          <div class="about_text">
-            <h3>Give Us A Call</h3>
-            <p>+(xxx) xxxx-xxxx</p>
+    <section class="ourhistory">
+      <div class="ourhistory_content">
+        <div class="ourhistory_title">
+          <h2>Our History</h2>
+        </div>
+        <div class="ourhistory_container">
+          <div class="ourhistory_logo">
+            <img src="Assets/jc_imagotipo-04.png" alt="">
+          </div>
+          <div class="ourhistory_text">
+            JC Barber and Beauty Supply started with a Dream, vision, passion of one person and a group of amazing
+            people who have become family and has helped us become who we are right now. <br><br>
+            Our CEO, Julio Santos went from selling blades, brushes and other essentials to barbershops and salons in a
+            2-door car (Mustang) during his lunch break in 2006, to and amazing business owner with 2 Stores, a
+            Warehouse and 4 Mobile Stores, these visit salons and barbershops in all Central Florida. <br><br>            Our mission is to support and provide all professionals and business partners all over USA and
+            Internationally, with the best products and brands in the market, carrying 100+ brands between the store and
+            warehouse and adding many more in the future.
+            <!-- <p>
+              The story of JC Barber and Beauty Supply started with a Dream, vision, passion of one person and a group of
+              amazing people who have become family and has helped us become who we are right now.
+              Our founder, Julio Santos went from selling blades, brushes and others essentials to barbershops and salons
+              in
+              a 2 door car (Mustang) during his lunch break in 2006, to and amazing business owner with 2 Stores, a
+              Warehouse and 3 Vans:
+            </p>
+            <ol>
+              <li>JC Barber and Beauty Supply (Orlando) since 2012 </li>
+              <li>R Beauty Supply (Kissimmee) since 2015 </li>
+              <li>Warehouse (Orlando) since 2018 for wholesale </li>
+              <li>3 Vans (they visit salons and barbershops in all Central Florida) </li>
+            </ol>
+            <p>
+            Our mission is to support and provide all professionals and business partners all over USA and
+            Internationally, with the best products and brands in the market, carrying 100+ brands at the moment between
+            the store and warehouse and adding many more in the future.
+            </p> -->
           </div>
         </div>
       </div>
