--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       </div>
     </div>
   </nav>
+
   <div class="contenedor-carrucel">
     <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
@@ -53,18 +54,19 @@
         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 3"></button>
       </div>
+
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="5000">
-          <img src="Assets/ArchivoPortadasJcSuply1.jpg" class="d-block w-100 banner_img" alt="...">
+          <img src="Assets/BANNER1.jpg" class="d-block banner-img" alt="..." >
         </div>
-        <!-- <div class="carousel-item" data-bs-interval="2000">
-          <img src="Assets/prueba.jpg" class="d-block w-100 banner-img" alt="...">
+        <div class="carousel-item" data-bs-interval="2000">
+          <img src="Assets/BANNER1.jpg" class="d-block banner-img" alt="...">
+        </div>
+        <!-- <div class="carousel-item">
+          <img src="Assets/BANNER2.jpg" class="d-block banner-img" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="Assets/baner de prueba 2.jpg" class="d-block w-100 banner-img" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="Assets/baner de prueba 4.jpg" class="d-block w-100 banner-img" alt="...">
+          <img src="Assets/BANNER3.jpg" class="d-block banner-img" alt="...">
         </div> -->
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
@@ -175,43 +177,223 @@
         </div>
         <div class="ourhistory_container">
           <div class="ourhistory_logo">
-            <img src="Assets/jc_imagotipo-04.png" alt="">
+            <img src="Assets/Recurso 2.png" alt="">
           </div>
           <div class="ourhistory_text">
             JC Barber and Beauty Supply started with a Dream, vision, passion of one person and a group of amazing
             people who have become family and has helped us become who we are right now. <br><br>
             Our CEO, Julio Santos went from selling blades, brushes and other essentials to barbershops and salons in a
             2-door car (Mustang) during his lunch break in 2006, to and amazing business owner with 2 Stores, a
-            Warehouse and 4 Mobile Stores, these visit salons and barbershops in all Central Florida. <br><br>            Our mission is to support and provide all professionals and business partners all over USA and
+            Warehouse and 4 Mobile Stores, these visit salons and barbershops in all Central Florida. <br><br> Our
+            mission is to support and provide all professionals and business partners all over USA and
             Internationally, with the best products and brands in the market, carrying 100+ brands between the store and
             warehouse and adding many more in the future.
-            <!-- <p>
-              The story of JC Barber and Beauty Supply started with a Dream, vision, passion of one person and a group of
-              amazing people who have become family and has helped us become who we are right now.
-              Our founder, Julio Santos went from selling blades, brushes and others essentials to barbershops and salons
-              in
-              a 2 door car (Mustang) during his lunch break in 2006, to and amazing business owner with 2 Stores, a
-              Warehouse and 3 Vans:
-            </p>
-            <ol>
-              <li>JC Barber and Beauty Supply (Orlando) since 2012 </li>
-              <li>R Beauty Supply (Kissimmee) since 2015 </li>
-              <li>Warehouse (Orlando) since 2018 for wholesale </li>
-              <li>3 Vans (they visit salons and barbershops in all Central Florida) </li>
-            </ol>
-            <p>
-            Our mission is to support and provide all professionals and business partners all over USA and
-            Internationally, with the best products and brands in the market, carrying 100+ brands at the moment between
-            the store and warehouse and adding many more in the future.
-            </p> -->
           </div>
         </div>
       </div>
     </section>
 
     <section class="contactus">
-      contactanos
+      <h2>Contact with us</h2>
+      <div class="contactus_container">
+        <div class="contactus_info">
+
+          <div class="card_info">
+            <div class="card_info-icon">
+              <i class="bi bi-geo-alt-fill"></i>
+            </div>
+            <div class="card_info-text">
+              <p class="info_store">9468 American Eagle Way</p>
+              <p class="info_address">9468 American Eagle Way, Orlando, FL 32837, EE. UU.</p>
+            </div>
+          </div>
+          <div class="card_info">
+            <div class="card_info-icon">
+              <i class="bi bi-geo-alt-fill"></i>
+            </div>
+            <div class="card_info-text">
+              <p class="info_store">R Barber And Beauty Supply</p>
+              <p class="info_address">3283 S John Young Pkwy ste e, Kissimmee, FL 34746, Estados Unidos</p>
+            </div>
+          </div>
+          <div class="card_info">
+            <div class="card_info-icon">
+              <i class="bi bi-geo-alt-fill"></i>
+            </div>
+            <div class="card_info-text">
+              <p class="info_store">Jc barber and Beauty Supply</p>
+              <p class="info_address">11601 S Orange Blossom Trl #103, Orlando, FL 32837, Estados Unidos</p>
+            </div>
+          </div>
+
+        </div>
+        <div class="contacus_googlemap">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3508.8756290780216!2d-81.41273517519947!3d28.42300942652989!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e77deafc08126f%3A0x34ed9ca7a2ac5855!2s9468%20American%20Eagle%20Way%2C%20Orlando%2C%20FL%2032837%2C%20EE.%20UU.!5e0!3m2!1ses!2ssv!4v1665521974240!5m2!1ses!2ssv"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </div>
     </section>
+
+    <section class="slider">
+      <h2>New products</h2>
+      <div class="slide-track">
+          <div class="slide">
+            <img src="Assets/grip-trimmer-black.jpeg" alt="">
+          </div>
+          <div class="slide">
+            <img src="Assets/grip-trimmer-green.jpeg" alt="">
+          </div>
+          <div class="slide">
+            <img src="Assets/grip-trimmer-orange.jpeg" alt="">
+          </div>
+          <div class="slide">
+            <img src="Assets/grip-trimmer-red.jpeg" alt="">
+          </div>
+          <div class="slide">
+            <img src="Assets/grip-trimmer-yellow.jpeg" alt="">
+          </div>
+          <div class="slide">
+            <img src="Assets/grip-trimmer-gucci.jpeg" alt="">
+          </div>
+          <div class="slide">
+            <img src="Assets/brand_7.jpg" alt="">
+          </div>
+          <div class="slide">
+            <img src="Assets/brand_8.jpg" alt="">
+          </div>
+          <div class="slide">
+            <img src="Assets/brand_9.jfif" alt="">
+          </div>
+          <div class="slide">
+            <img src="Assets/brand_10.jpg" alt="">
+          </div>
+          <div class="slide">
+            <img src="Assets/brand_11.jfif" alt="">
+          </div>
+          <div class="slide">
+            <img src="Assets/brand_12.png" alt="">
+          </div>
+          <div class="slide">
+            <img src="Assets/brand_13.jpg" alt="">
+          </div>
+          <div class="slide">
+            <img src="Assets/brand_14.jpg" alt="">
+          </div>
+          <div class="slide">
+            <img src="Assets/brand_15.jpg" alt="">
+          </div>
+          <div class="slide">
+            <img src="Assets/brand_16.jpg" alt="">
+          </div>
+          <div class="slide">
+            <img src="Assets/brand_17.jfif" alt="">
+          </div>
+      </div>
+    </section>
+
+    <section class="galery">
+      <div class="galery_content">
+        <!-- <div class="row row-cols-1 row-cols-md-4 g-4">
+          <div class="col">
+            <div class="card">
+              <img src="Assets/trimmerss.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Trimmers</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+            </div>
+          </div>
+        </div> -->
+        <h2>Galeria</h2>
+        <div class="galeria-port">
+          <div class="imagen-port">
+              <img src="Assets/trimmerss.jpg" alt="">
+              <div class="hover-galeria">
+                  <img src="img/icono1.png" alt="">
+                  <p>Timmers</p>
+              </div>
+          </div>
+          <div class="imagen-port">
+              <img src="img/img2.jpg" alt="">
+              <div class="hover-galeria">
+                  <img src="img/icono1.png" alt="">
+                  <p>Nuestro trabajo</p>
+              </div>
+          </div>
+          <div class="imagen-port">
+              <img src="img/img3.jpg" alt="">
+              <div class="hover-galeria">
+                  <img src="img/icono1.png" alt="">
+                  <p>Nuestro trabajo</p>
+              </div>
+          </div>
+          <div class="imagen-port">
+              <img src="img/img1.jpg" alt="">
+              <div class="hover-galeria">
+                  <img src="img/icono1.png" alt="">
+                  <p>Nuestro trabajo</p>
+              </div>
+          </div>
+          <div class="imagen-port">
+              <img src="img/img4.jpg" alt="">
+              <div class="hover-galeria">
+                  <img src="img/icono1.png" alt="">
+                  <p>Nuestro trabajo</p>
+              </div>
+          </div>
+          <div class="imagen-port">
+              <img src="img/img5.jpg" alt="">
+              <div class="hover-galeria">
+                  <img src="img/icono1.png" alt="">
+                  <p>Nuestro trabajo</p>
+              </div>
+          </div>
+          <div class="imagen-port">
+              <img src="img/img6.jpg" alt="">
+              <div class="hover-galeria">
+                  <img src="img/icono1.png" alt="">
+                  <p>Nuestro trabajo</p>
+              </div>
+          </div>
+          <div class="imagen-port">
+              <img src="img/img7.jpg" alt="">
+              <div class="hover-galeria">
+                  <img src="img/icono1.png" alt="">
+                  <p>Nuestro trabajo</p>
+              </div>
+          </div>
+      </div>
+      </div>
+    </section>
+
   </main>
 
 
