--- a/index.html
+++ b/index.html
@@ -55,98 +55,98 @@
           <!--  -->
           <div class="new_product_slide">
             <div class="slide">
-              <img src="/Assets/new_product/trimmer1.jpg" alt="" srcset="">
+              <img src="Assets/new_product/trimmer1.jpg" alt="" srcset="">
               <div class="slide_info">
                 <h3>Trimmer 1</h3>
                 <p>Nueva Trimer 1 info</p>
               </div>
             </div>
             <div class="slide">
-              <img src="/Assets/new_product/trimmer2.jpg" alt="" srcset="">
+              <img src="Assets/new_product/trimmer2.jpg" alt="" srcset="">
               <div class="slide_info">
                 <h3>Trimmer 2</h3>
                 <p>Nueva Trimer 2 info</p>
               </div>
             </div>
             <div class="slide">
-              <img src="/Assets/new_product/trimmer3.jpg" alt="" srcset="">
+              <img src="Assets/new_product/trimmer3.jpg" alt="" srcset="">
               <div class="slide_info">
                 <h3>Trimmer 3</h3>
                 <p>Nueva Trimer 3 info</p>
               </div>
             </div>
             <div class="slide">
-              <img src="/Assets/new_product/trimmer4.jpg" alt="" srcset="">
+              <img src="Assets/new_product/trimmer4.jpg" alt="" srcset="">
               <div class="slide_info">
                 <h3>Trimmer 4 </h3>
                 <p>Nueva Trimer 4 info</p>
               </div>
             </div>
             <div class="slide">
-              <img src="/Assets/new_product/trimmer5.jpg" alt="" srcset="">
+              <img src="Assets/new_product/trimmer5.jpg" alt="" srcset="">
               <div class="slide_info">
                 <h3>Trimmer 5</h3>
                 <p>Nueva Trimer 5 info</p>
               </div>
             </div>
             <div class="slide">
-              <img src="/Assets/new_product/trimmer6.jpg" alt="" srcset="">
+              <img src="Assets/new_product/trimmer6.jpg" alt="" srcset="">
               <div class="slide_info">
                 <h3>Trimmer 6</h3>
                 <p>Nueva Trimer 6 info</p>
               </div>
             </div>
             <div class="slide">
-              <img src="/Assets/new_product/trimmer7.png" alt="" srcset="">
+              <img src="Assets/new_product/trimmer7.png" alt="" srcset="">
               <div class="slide_info">
                 <h3>Trimmer 7</h3>
                 <p>Nueva Trimer 7 info</p>
               </div>
             </div>
             <div class="slide">
-              <img src="/Assets/new_product/trimmer1.jpg" alt="" srcset="">
+              <img src="Assets/new_product/trimmer1.jpg" alt="" srcset="">
               <div class="slide_info">
                 <h3>Trimmer 1</h3>
                 <p>Nueva Trimer 1 info</p>
               </div>
             </div>
             <div class="slide">
-              <img src="/Assets/new_product/trimmer2.jpg" alt="" srcset="">
+              <img src="Assets/new_product/trimmer2.jpg" alt="" srcset="">
               <div class="slide_info">
                 <h3>Trimmer 2</h3>
                 <p>Nueva Trimer 2 info</p>
               </div>
             </div>
             <div class="slide">
-              <img src="/Assets/new_product/trimmer3.jpg" alt="" srcset="">
+              <img src="Assets/new_product/trimmer3.jpg" alt="" srcset="">
               <div class="slide_info">
                 <h3>Trimmer 3</h3>
                 <p>Nueva Trimer 3 info</p>
               </div>
             </div>
             <div class="slide">
-              <img src="/Assets/new_product/trimmer4.jpg" alt="" srcset="">
+              <img src="Assets/new_product/trimmer4.jpg" alt="" srcset="">
               <div class="slide_info">
                 <h3>Trimmer 4 </h3>
                 <p>Nueva Trimer 4 info</p>
               </div>
             </div>
             <div class="slide">
-              <img src="/Assets/new_product/trimmer5.jpg" alt="" srcset="">
+              <img src="Assets/new_product/trimmer5.jpg" alt="" srcset="">
               <div class="slide_info">
                 <h3>Trimmer 5</h3>
                 <p>Nueva Trimer 5 info</p>
               </div>
             </div>
             <div class="slide">
-              <img src="/Assets/new_product/trimmer6.jpg" alt="" srcset="">
+              <img src="Assets/new_product/trimmer6.jpg" alt="" srcset="">
               <div class="slide_info">
                 <h3>Trimmer 6</h3>
                 <p>Nueva Trimer 6 info</p>
               </div>
             </div>
             <div class="slide">
-              <img src="/Assets/new_product/trimmer7.png" alt="" srcset="">
+              <img src="Assets/new_product/trimmer7.png" alt="" srcset="">
               <div class="slide_info">
                 <h3>Trimmer 7</h3>
                 <p>Nueva Trimer 7 info</p>
@@ -399,21 +399,17 @@
 
               <div class="social_card_info">
                 <div class="card_info-icon">
-                  <i class="bi bi-envelope"></i>
-                </div>
-                <div class="card_info-text">
-                  <p class="info_store"> Escribenos a nuestro correo electronico y .....</p>
-                  <p class="info_address ">Jcbbsuply1@gmail.com</p>
-                </div>
-              </div>
-
-              <div class="social_card_info">
-                <div class="card_info-icon">
                   <i class="bi bi-facebook"></i>
                 </div>
                 <div class="card_info-text">
                   <!-- <p class="info_store">Facebook</p> -->
                   <a class="info_address social_link" href="https://www.facebook.com/jcbarbersupply1" _blank>JC Barber And Beauty Supply</a>
+                </div>
+                <div class="card_info-icon">
+                  <i class="bi bi-whatsapp"></i>
+                </div>
+                <div class="card_info-text">
+                  <a class="info_address social_link" href="https://api.whatsapp.com/send?phone=50374944007&text=Hola, deseo informacion!" target="_blank">Hablanos por whatsapp</a>
                 </div>
               </div>
 
@@ -427,7 +423,17 @@
                   <a _blank class="info_address social_link" href="https://www.instagram.com/jcbeautysupply2">JC Supply 2</a>
                   <a _blank class="info_address social_link" href="https://www.instagram.com/elgoncosmetic_orlando">Elgon Cosmetics Orlando</a>
                   <a _blank class="info_address social_link" href="https://www.instagram.com/miasecretorlando">Mia Secret Orlando</a>
-                  <a _blank class="info_address social_link" href="https://www.instagram.com/nishmanofficialusa/">NisMan Official Usa</a>
+                  <a _blank class="info_address social_link" href="https://www.instagram.com/nishmanofficialusa/">NishMan Official Usa</a>
+                </div>
+              </div>
+
+              <div class="social_card_info">
+                <div class="card_info-icon">
+                  <i class="bi bi-envelope"></i>
+                </div>
+                <div class="card_info-text">
+                  <p class="info_store"> Escribenos a nuestro correo electronico y .....</p>
+                  <p class="info_address ">Jcbbsuply1@gmail.com</p>
                 </div>
               </div>
 
