--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           </div>
         </div>
 
-        <div class="container">
+        <div class="content">
           <h2 class="subtitle">Our Beauty Brands</h2>
 
           <div class="brands_container">
