--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </nav>
 
     <div class="portada">
-      <img src="Assets/portada.jpg" alt="">
+      <!-- <img src="Assets/portada.jpg" alt=""> -->
     </div>
 
     <main>
