--- a/index.html
+++ b/index.html
@@ -28,23 +28,26 @@
             <div class="mx-auto"></div>
             <ul class="navbar-nav">
               <li class="nav-item ">
-                <a class="nav-link active text-white" aria-current="page" href="Jc_Page/index.html">Home</a>
+                <a class="nav-link active text-white" aria-current="page" href="#portada">Home</a>
               </li>
               <li class="nav-item ">
                 <a class="nav-link text-white active" aria-current="page" href="#brands">Brands</a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link text-white active" aria-current="page" href="#aboutus">About Us</a>
+                <a class="nav-link text-white active" aria-current="page" href="#history">Our History</a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link text-white active" aria-current="page" href="#contactus">Contact Us</a>
+                <a class="nav-link text-white active" aria-current="page" href="#contact">Contact Us</a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link text-white active" aria-current="page" href="#galery">Galery</a>
               </li>
             </ul>
           </div>
         </div>
     </nav>
 
-    <div class="portada">
+    <div id="portada" class="portada">
       <!-- <img src="Assets/portada.jpg" alt=""> -->
     </div>
 
@@ -157,7 +160,7 @@
           <!--  -->
       </section>
 
-      <section class="brands">
+      <section id="brands" class="brands">
         <div class="content">
           <h2 class="subtitle">Our Brands</h2>
           <div class="brands_container">
@@ -274,7 +277,7 @@
         </div>
       </section>
 
-      <section class="history">
+      <section id="history" class="history">
         <div class="content">
           <h2 class="subtitle">Our History</h2>
           <div class="history_text">
@@ -293,46 +296,7 @@
         </div>
       </section>
 
-      <section class="contact">
-        <div class="content">
-
-          <h2 class="subtitle">Contact Us</h2>
-
-          <div class="contactus_container">
-
-            <div class="contactus_info">
-              <div class="card_info">
-                <div class="card_info-icon">
-                  <i class="bi bi-geo-alt-fill"></i>
-                </div>
-                <div class="card_info-text">
-                  <p class="info_store">R Barber And Beauty Supply</p>
-                  <p class="info_address">3283 S John Young Pkwy ste e, Kissimmee, FL 34746, Estados Unidos</p>
-                </div>
-              </div>
-              <div class="card_info">
-                <div class="card_info-icon">
-                  <i class="bi bi-geo-alt-fill"></i>
-                </div>
-                <div class="card_info-text">
-                  <p class="info_store">Jc barber and Beauty Supply</p>
-                  <p class="info_address">11601 S Orange Blossom Trl #103, Orlando, FL 32837, Estados Unidos</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="contacus_googlemap">
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3508.8756290780216!2d-81.41273517519947!3d28.42300942652989!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e77deafc08126f%3A0x34ed9ca7a2ac5855!2s9468%20American%20Eagle%20Way%2C%20Orlando%2C%20FL%2032837%2C%20EE.%20UU.!5e0!3m2!1ses!2ssv!4v1665521974240!5m2!1ses!2ssv"
-                width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-
-          </div>
-        </div>
-      </section>
-
-      <section class="callus">
+      <section id="contact" class="callus">
         <div class="content">
           <h2 class="subtitle">Give Us A Call</h2>
 
@@ -389,9 +353,50 @@
         </div>
       </section>
 
+      <section class="contact">
+        <div class="content">
+
+          <!-- <h2 class="subtitle">Contact Us</h2> -->
+
+          <div class="contactus_container">
+
+            <div class="contactus_info">
+              <div class="card_info">
+                <div class="card_info-icon">
+                  <i class="bi bi-geo-alt-fill"></i>
+                </div>
+                <div class="card_info-text">
+                  <p class="info_store">R Barber And Beauty Supply</p>
+                  <p class="info_address">3283 S John Young Pkwy ste e, Kissimmee, FL 34746, Estados Unidos</p>
+                </div>
+              </div>
+              <div class="card_info">
+                <div class="card_info-icon">
+                  <i class="bi bi-geo-alt-fill"></i>
+                </div>
+                <div class="card_info-text">
+                  <p class="info_store">Jc barber and Beauty Supply</p>
+                  <p class="info_address">11601 S Orange Blossom Trl #103, Orlando, FL 32837, Estados Unidos</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="contacus_googlemap">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3508.8756290780216!2d-81.41273517519947!3d28.42300942652989!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e77deafc08126f%3A0x34ed9ca7a2ac5855!2s9468%20American%20Eagle%20Way%2C%20Orlando%2C%20FL%2032837%2C%20EE.%20UU.!5e0!3m2!1ses!2ssv!4v1665521974240!5m2!1ses!2ssv"
+                width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+
+          </div>
+        </div>
+      </section>
+
+
+
       <section class="social">
         <div class="content">
-          <h2 class="subtitle">Social media Us A Call</h2>
+          <h2 class="subtitle">Social media</h2>
 
           <div class="social_info">
 
@@ -471,7 +476,7 @@
         </div>
       </section>
 
-      <section class="galery">
+      <section id="galery" class="galery">
         <div class="content">
           <div class="galery_content">
             <div class="galery_item">
