--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark  fw-normal">
         <div class="container">
           <a class="navbar-brand" href="#">
-            <img src="./Assets/Logo.png" alt="JC supply" width="" height="40">
+            <img src="./Assets/Logo.png" alt="JC supply" width="" height="30">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,9 +47,34 @@
         </div>
     </nav>
 
-    <div id="portada" class="portada">
-      <!-- <img src="Assets/portada.jpg" alt=""> -->
-    </div>
+    <section class="carrucel">
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner total">
+          <div class="carousel-item active" data-bs-interval="3000">
+            <img src="Assets/banners/portada.jpg" class="d-block w-100" alt="...">
+          </div>
+            <div class="carousel-item" data-bs-interval="2000" >
+              <img src="Assets/banners/banner_2.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="Assets/banners/banner_3.jpg" class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </section>
 
     <main>
       <section class="new_product">
@@ -252,29 +277,137 @@
               <div class="brand">
                 <img src="Assets/beauty_brand/brand_2.jpg" alt="Dominican Magic">
               </div>
-              <div class="brand">
+              <!-- <div class="brand ocult">
                 <img src="Assets/beauty_brand/brand_3.jpg" alt="Elgon">
               </div>
-              <div class="brand">
+              <div class="brand ocult">
                 <img src="Assets/beauty_brand/brand_4.jpg" alt="Diane">
               </div>
-              <div class="brand">
+              <div class="brand ocult">
                 <img src="Assets/beauty_brand/brand_5.png" alt="Style Tek">
               </div>
-              <div class="brand">
+              <div class="brand ocult">
                 <img src="Assets/beauty_brand/brand_6.jpg" alt="Nutrapel professional">
               </div>
-              <div class="brand">
+              <div class="brand ocult">
                 <img src="Assets/beauty_brand/brand_7.jpg" alt="Fromm">
               </div>
-              <div class="brand">
+              <div class="brand ocult">
                 <img src="Assets/beauty_brand/brand_8.jpg" alt="Crazy Color">
               </div>
-              <div class="brand">
+              <div class="brand ocult">
                 <img src="Assets/beauty_brand/brand_1.jpg" alt="Olivia Ganden OG">
-              </div>
+              </div> -->
           </div>
         </div>
+      </section>
+
+      <section class="new_product">
+        <div class="content">
+          <h2 class="subtitle">Lo mas vendido</h2>
+          <!--  -->
+          <div class="new_product_slide">
+            <div class="slide">
+              <img src="Assets/new_product/trimmer1.jpg" alt="" srcset="">
+              <div class="slide_info">
+                <h3>Trimmer 1</h3>
+                <p>Nueva Trimer 1 info</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="Assets/new_product/trimmer2.jpg" alt="" srcset="">
+              <div class="slide_info">
+                <h3>Trimmer 2</h3>
+                <p>Nueva Trimer 2 info</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="Assets/new_product/trimmer3.jpg" alt="" srcset="">
+              <div class="slide_info">
+                <h3>Trimmer 3</h3>
+                <p>Nueva Trimer 3 info</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="Assets/new_product/trimmer4.jpg" alt="" srcset="">
+              <div class="slide_info">
+                <h3>Trimmer 4 </h3>
+                <p>Nueva Trimer 4 info</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="Assets/new_product/trimmer5.jpg" alt="" srcset="">
+              <div class="slide_info">
+                <h3>Trimmer 5</h3>
+                <p>Nueva Trimer 5 info</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="Assets/new_product/trimmer6.jpg" alt="" srcset="">
+              <div class="slide_info">
+                <h3>Trimmer 6</h3>
+                <p>Nueva Trimer 6 info</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="Assets/new_product/trimmer7.png" alt="" srcset="">
+              <div class="slide_info">
+                <h3>Trimmer 7</h3>
+                <p>Nueva Trimer 7 info</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="Assets/new_product/trimmer1.jpg" alt="" srcset="">
+              <div class="slide_info">
+                <h3>Trimmer 1</h3>
+                <p>Nueva Trimer 1 info</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="Assets/new_product/trimmer2.jpg" alt="" srcset="">
+              <div class="slide_info">
+                <h3>Trimmer 2</h3>
+                <p>Nueva Trimer 2 info</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="Assets/new_product/trimmer3.jpg" alt="" srcset="">
+              <div class="slide_info">
+                <h3>Trimmer 3</h3>
+                <p>Nueva Trimer 3 info</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="Assets/new_product/trimmer4.jpg" alt="" srcset="">
+              <div class="slide_info">
+                <h3>Trimmer 4 </h3>
+                <p>Nueva Trimer 4 info</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="Assets/new_product/trimmer5.jpg" alt="" srcset="">
+              <div class="slide_info">
+                <h3>Trimmer 5</h3>
+                <p>Nueva Trimer 5 info</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="Assets/new_product/trimmer6.jpg" alt="" srcset="">
+              <div class="slide_info">
+                <h3>Trimmer 6</h3>
+                <p>Nueva Trimer 6 info</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="Assets/new_product/trimmer7.png" alt="" srcset="">
+              <div class="slide_info">
+                <h3>Trimmer 7</h3>
+                <p>Nueva Trimer 7 info</p>
+              </div>
+            </div>
+          </div>
+        </div>
+          <!--  -->
       </section>
 
       <section id="history" class="history">
@@ -312,7 +445,7 @@
                   <p class="info_store">R Barber And Beauty Supply</p>
                   <p class="info_address">Monday - Friday</p>
                   <p class="info_address">8am - 4pm</p>
-                  <p class="info_address">XXXX-XXX-XXXX</p>
+                  <p class="info_address"><span>321 250 2966</span> or <span>689 260 7361</span></p>
                 </div>
               </div>
 
@@ -324,7 +457,7 @@
                   <p class="info_store">Jc barber and Beauty Supply</p>
                   <p class="info_address">Monday - Friday</p>
                   <p class="info_address">8am - 4pm</p>
-                  <p class="info_address">XXXX-XXX-XXXX</p>
+                  <p class="info_address"><span>407 855 6959</span> or <span>689 260 7376</span></p>
                 </div>
               </div>
 
@@ -342,7 +475,7 @@
                   <p class="info_store">Jc barber and Beauty Supply</p>
                   <p class="info_address">Monday - Friday</p>
                   <p class="info_address">8am - 4pm</p>
-                  <p class="info_address">XXXX-XXX-XXXX</p>
+                  <p class="info_address"><span>407 704 7576</span></p>
                 </div>
               </div>
 
@@ -392,8 +525,6 @@
         </div>
       </section>
 
-
-
       <section class="social">
         <div class="content">
           <h2 class="subtitle">Social media</h2>
@@ -435,9 +566,9 @@
                 <div class="card_info-icon">
                   <i class="bi bi-envelope"></i>
                 </div>
-                <div class="card_info-text">
-                  <p class="info_store"> Escribenos a nuestro correo electronico y .....</p>
-                  <p class="info_address ">Jcbbsuply1@gmail.com</p>
+                <div class="card_info-email">
+                  <p class="info_store"> Or write to our email</p>
+                  <p class="info_addres "><span>Jcbbsuply1@gmail.com</span></p>
                 </div>
               </div>
 
@@ -448,28 +579,28 @@
         </div>
       </section>
 
-
       <section class="carrucel">
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        
+        <div id="carouselExampleControls1" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img src="Assets/carousel_banners/baner de prueba 1.jpg" class="d-block w-100" alt="...">
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" data-bs-interval="3000">
               <img src="Assets/carousel_banners/baner de prueba 2.jpg" class="d-block w-100" alt="...">
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" data-bs-interval="3000">
               <img src="Assets/carousel_banners/baner de prueba 3.jpg" class="d-block w-100" alt="...">
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" data-bs-interval="3000">
               <img src="Assets/carousel_banners/baner de prueba 4.jpg" class="d-block w-100" alt="...">
             </div>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
           </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </button>
