--- a/index.html
+++ b/index.html
@@ -82,104 +82,150 @@
           <h2 class="subtitle">New Product</h2>
           <!--  -->
           <div class="new_product_slide">
+
             <div class="slide">
-              <img src="Assets/new_product/trimmer1.jpg" alt="" srcset="">
+              <img src="Assets/new_product/new_product_1.jfif" alt="" srcset="">
               <div class="slide_info">
-                <h3>Trimmer 1</h3>
-                <p>Nueva Trimer 1 info</p>
+                <h3>S|C</h3>
+                <p>Cosmic Blower</p>
               </div>
             </div>
             <div class="slide">
-              <img src="Assets/new_product/trimmer2.jpg" alt="" srcset="">
+              <img src="Assets/new_product/new_product_2.jpg" alt="" srcset="">
               <div class="slide_info">
-                <h3>Trimmer 2</h3>
-                <p>Nueva Trimer 2 info</p>
+                <h3>18.21</h3>
+                <p>Man Made Beard Balm 2oz</p>
               </div>
             </div>
             <div class="slide">
-              <img src="Assets/new_product/trimmer3.jpg" alt="" srcset="">
+              <img src="Assets/new_product/new_product_3.jpg" alt="" srcset="">
               <div class="slide_info">
-                <h3>Trimmer 3</h3>
-                <p>Nueva Trimer 3 info</p>
+                <h3>18.21</h3>
+                <p>Man Made Hair Spray Sweet Tabacco 10oz</p>
               </div>
             </div>
             <div class="slide">
-              <img src="Assets/new_product/trimmer4.jpg" alt="" srcset="">
+              <img src="Assets/new_product/new_product_4.jpg" alt="" srcset="">
               <div class="slide_info">
-                <h3>Trimmer 4 </h3>
-                <p>Nueva Trimer 4 info</p>
+                <h3>18.21</h3>
+                <p>Man Made Pomade 2oz</p>
               </div>
             </div>
             <div class="slide">
-              <img src="Assets/new_product/trimmer5.jpg" alt="" srcset="">
+              <img src="Assets/new_product/new_product_5.jpg" alt="" srcset="">
               <div class="slide_info">
-                <h3>Trimmer 5</h3>
-                <p>Nueva Trimer 5 info</p>
+                <h3>Wahl</h3>
+                <p>Shaver Vanish</p>
               </div>
             </div>
             <div class="slide">
-              <img src="Assets/new_product/trimmer6.jpg" alt="" srcset="">
+              <img src="Assets/new_product/new_product_6.jpg" alt="" srcset="">
               <div class="slide_info">
-                <h3>Trimmer 6</h3>
-                <p>Nueva Trimer 6 info</p>
+                <h3>LEVEL3</h3>
+                <p>After Shave Cologne Rose</p>
               </div>
             </div>
             <div class="slide">
-              <img src="Assets/new_product/trimmer7.png" alt="" srcset="">
+              <img src="Assets/new_product/new_product_7.jpg" alt="" srcset="">
               <div class="slide_info">
-                <h3>Trimmer 7</h3>
-                <p>Nueva Trimer 7 info</p>
+                <h3>LEVEL3</h3>
+                <p>After Shave Cologne Midnight</p>
               </div>
             </div>
             <div class="slide">
-              <img src="Assets/new_product/trimmer1.jpg" alt="" srcset="">
+              <img src="Assets/new_product/new_product_8.jpg" alt="" srcset="">
               <div class="slide_info">
-                <h3>Trimmer 1</h3>
-                <p>Nueva Trimer 1 info</p>
+                <h3>Gamma+</h3>
+                <p>Fixed Steel X-Pro Classic Blade the One GP530SB</p>
               </div>
             </div>
             <div class="slide">
-              <img src="Assets/new_product/trimmer2.jpg" alt="" srcset="">
+              <img src="Assets/new_product/new_product_9.jpg" alt="" srcset="">
               <div class="slide_info">
-                <h3>Trimmer 2</h3>
-                <p>Nueva Trimer 2 info</p>
+                <h3>S|C</h3>
+                <p>Fixed Faper Blade & Slim Deep Moving Blade SET SC520B</p>
               </div>
             </div>
             <div class="slide">
-              <img src="Assets/new_product/trimmer3.jpg" alt="" srcset="">
+              <img src="Assets/new_product/new_product_10.jpg" alt="" srcset="">
               <div class="slide_info">
-                <h3>Trimmer 3</h3>
-                <p>Nueva Trimer 3 info</p>
+                <h3>S|C</h3>
+                <p>X-Pro the One Precision Blade Gold SET SC523GB</p>
+              </div>
+            </div>
+
+
+            <div class="slide">
+              <img src="Assets/new_product/new_product_1.jfif" alt="" srcset="">
+              <div class="slide_info">
+                <h3>S|C</h3>
+                <p>Cosmic Blower</p>
               </div>
             </div>
             <div class="slide">
-              <img src="Assets/new_product/trimmer4.jpg" alt="" srcset="">
+              <img src="Assets/new_product/new_product_2.jpg" alt="" srcset="">
               <div class="slide_info">
-                <h3>Trimmer 4 </h3>
-                <p>Nueva Trimer 4 info</p>
+                <h3>18.21</h3>
+                <p>Man Made Beard Balm 2oz</p>
               </div>
             </div>
             <div class="slide">
-              <img src="Assets/new_product/trimmer5.jpg" alt="" srcset="">
+              <img src="Assets/new_product/new_product_3.jpg" alt="" srcset="">
               <div class="slide_info">
-                <h3>Trimmer 5</h3>
-                <p>Nueva Trimer 5 info</p>
+                <h3>18.21</h3>
+                <p>Man Made Hair Spray Sweet Tabacco 10oz</p>
               </div>
             </div>
             <div class="slide">
-              <img src="Assets/new_product/trimmer6.jpg" alt="" srcset="">
+              <img src="Assets/new_product/new_product_4.jpg" alt="" srcset="">
               <div class="slide_info">
-                <h3>Trimmer 6</h3>
-                <p>Nueva Trimer 6 info</p>
+                <h3>18.21</h3>
+                <p>Man Made Pomade 2oz</p>
               </div>
             </div>
             <div class="slide">
-              <img src="Assets/new_product/trimmer7.png" alt="" srcset="">
+              <img src="Assets/new_product/new_product_5.jpg" alt="" srcset="">
               <div class="slide_info">
-                <h3>Trimmer 7</h3>
-                <p>Nueva Trimer 7 info</p>
+                <h3>Wahl</h3>
+                <p>Shaver Vanish</p>
               </div>
             </div>
+            <div class="slide">
+              <img src="Assets/new_product/new_product_6.jpg" alt="" srcset="">
+              <div class="slide_info">
+                <h3>LEVEL3</h3>
+                <p>After Shave Cologne Rose</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="Assets/new_product/new_product_7.jpg" alt="" srcset="">
+              <div class="slide_info">
+                <h3>LEVEL3</h3>
+                <p>After Shave Cologne Midnight</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="Assets/new_product/new_product_8.jpg" alt="" srcset="">
+              <div class="slide_info">
+                <h3>Gamma+</h3>
+                <p>Fixed Steel X-Pro Classic Blade the One GP530SB</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="Assets/new_product/new_product_9.jpg" alt="" srcset="">
+              <div class="slide_info">
+                <h3>S|C</h3>
+                <p>Fixed Faper Blade & Slim Deep Moving Blade SET SC520B</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="Assets/new_product/new_product_10.jpg" alt="" srcset="">
+              <div class="slide_info">
+                <h3>S|C</h3>
+                <p>X-Pro the One Precision Blade Gold SET SC523GB</p>
+              </div>
+            </div>
+            
           </div>
         </div>
           <!--  -->
@@ -240,6 +286,9 @@
             <div class="brand">
               <img src="Assets/barber_brands/brand_17.jfif" alt="Bigen">
             </div>
+            <div class="brand">
+              <img src="Assets/barber_brands/brand_18.jpeg" alt="18.21">
+            </div>
           </div>
         </div>
 
@@ -248,7 +297,7 @@
 
           <div class="brands_container">
               <div class="brand">
-                <img src="Assets/beauty_brand/brand_1.jpg" alt="Olivia Ganden OG">
+                <img src="Assets/beauty_brand/brand_1.jpeg" alt="Olivia Ganden OG">
               </div>
               <div class="brand">
                 <img src="Assets/beauty_brand/brand_2.jpg" alt="Dominican Magic">
@@ -271,13 +320,15 @@
               <div class="brand">
                 <img src="Assets/beauty_brand/brand_8.jpg" alt="Crazy Color">
               </div>
+              
+              <!--
               <div class="brand">
                 <img src="Assets/beauty_brand/brand_1.jpg" alt="Olivia Ganden OG">
               </div>
               <div class="brand">
                 <img src="Assets/beauty_brand/brand_2.jpg" alt="Dominican Magic">
               </div>
-              <!-- <div class="brand ocult">
+               <div class="brand ocult">
                 <img src="Assets/beauty_brand/brand_3.jpg" alt="Elgon">
               </div>
               <div class="brand ocult">
@@ -300,114 +351,6 @@
               </div> -->
           </div>
         </div>
-      </section>
-
-      <section class="new_product">
-        <div class="content">
-          <h2 class="subtitle">Lo mas vendido</h2>
-          <!--  -->
-          <div class="new_product_slide">
-            <div class="slide">
-              <img src="Assets/new_product/trimmer1.jpg" alt="" srcset="">
-              <div class="slide_info">
-                <h3>Trimmer 1</h3>
-                <p>Nueva Trimer 1 info</p>
-              </div>
-            </div>
-            <div class="slide">
-              <img src="Assets/new_product/trimmer2.jpg" alt="" srcset="">
-              <div class="slide_info">
-                <h3>Trimmer 2</h3>
-                <p>Nueva Trimer 2 info</p>
-              </div>
-            </div>
-            <div class="slide">
-              <img src="Assets/new_product/trimmer3.jpg" alt="" srcset="">
-              <div class="slide_info">
-                <h3>Trimmer 3</h3>
-                <p>Nueva Trimer 3 info</p>
-              </div>
-            </div>
-            <div class="slide">
-              <img src="Assets/new_product/trimmer4.jpg" alt="" srcset="">
-              <div class="slide_info">
-                <h3>Trimmer 4 </h3>
-                <p>Nueva Trimer 4 info</p>
-              </div>
-            </div>
-            <div class="slide">
-              <img src="Assets/new_product/trimmer5.jpg" alt="" srcset="">
-              <div class="slide_info">
-                <h3>Trimmer 5</h3>
-                <p>Nueva Trimer 5 info</p>
-              </div>
-            </div>
-            <div class="slide">
-              <img src="Assets/new_product/trimmer6.jpg" alt="" srcset="">
-              <div class="slide_info">
-                <h3>Trimmer 6</h3>
-                <p>Nueva Trimer 6 info</p>
-              </div>
-            </div>
-            <div class="slide">
-              <img src="Assets/new_product/trimmer7.png" alt="" srcset="">
-              <div class="slide_info">
-                <h3>Trimmer 7</h3>
-                <p>Nueva Trimer 7 info</p>
-              </div>
-            </div>
-            <div class="slide">
-              <img src="Assets/new_product/trimmer1.jpg" alt="" srcset="">
-              <div class="slide_info">
-                <h3>Trimmer 1</h3>
-                <p>Nueva Trimer 1 info</p>
-              </div>
-            </div>
-            <div class="slide">
-              <img src="Assets/new_product/trimmer2.jpg" alt="" srcset="">
-              <div class="slide_info">
-                <h3>Trimmer 2</h3>
-                <p>Nueva Trimer 2 info</p>
-              </div>
-            </div>
-            <div class="slide">
-              <img src="Assets/new_product/trimmer3.jpg" alt="" srcset="">
-              <div class="slide_info">
-                <h3>Trimmer 3</h3>
-                <p>Nueva Trimer 3 info</p>
-              </div>
-            </div>
-            <div class="slide">
-              <img src="Assets/new_product/trimmer4.jpg" alt="" srcset="">
-              <div class="slide_info">
-                <h3>Trimmer 4 </h3>
-                <p>Nueva Trimer 4 info</p>
-              </div>
-            </div>
-            <div class="slide">
-              <img src="Assets/new_product/trimmer5.jpg" alt="" srcset="">
-              <div class="slide_info">
-                <h3>Trimmer 5</h3>
-                <p>Nueva Trimer 5 info</p>
-              </div>
-            </div>
-            <div class="slide">
-              <img src="Assets/new_product/trimmer6.jpg" alt="" srcset="">
-              <div class="slide_info">
-                <h3>Trimmer 6</h3>
-                <p>Nueva Trimer 6 info</p>
-              </div>
-            </div>
-            <div class="slide">
-              <img src="Assets/new_product/trimmer7.png" alt="" srcset="">
-              <div class="slide_info">
-                <h3>Trimmer 7</h3>
-                <p>Nueva Trimer 7 info</p>
-              </div>
-            </div>
-          </div>
-        </div>
-          <!--  -->
       </section>
 
       <section id="history" class="history">
@@ -442,9 +385,11 @@
                   <i class="bi bi-shop"></i>
                 </div>
                 <div class="card_info-text">
-                  <p class="info_store">R Barber And Beauty Supply</p>
-                  <p class="info_address">Monday - Friday</p>
-                  <p class="info_address">8am - 4pm</p>
+                  <p class="info_store">R Barber & Beauty Supply</p>
+                  <p class="info_address">Monday</p>
+                  <p class="info_address">9:00am - 6:00pm</p>
+                  <p class="info_address">Tuesday - Saturday</p>
+                  <p class="info_address">8:30am - 6:00pm</p>
                   <p class="info_address"><span>321 250 2966</span> or <span>689 260 7361</span></p>
                 </div>
               </div>
@@ -454,16 +399,18 @@
                   <i class="bi bi-shop"></i>
                 </div>
                 <div class="card_info-text">
-                  <p class="info_store">Jc barber and Beauty Supply</p>
-                  <p class="info_address">Monday - Friday</p>
-                  <p class="info_address">8am - 4pm</p>
+                  <p class="info_store">Jc Barber & Beauty Supply</p>
+                  <p class="info_address">Monday</p>
+                  <p class="info_address">9:00am - 6:00pm</p>
+                  <p class="info_address">Tuesday - Saturday</p>
+                  <p class="info_address">8:30am - 6:00pm</p>
                   <p class="info_address"><span>407 855 6959</span> or <span>689 260 7376</span></p>
                 </div>
               </div>
 
             </div>
 
-            <h2 class="subtitle">Contact our wherehouse</h2>
+            <h2 class="subtitle">Contact Our Warehouse</h2>
 
             <div class="callus_container">
 
@@ -472,9 +419,9 @@
                   <i class="bi bi-telephone"></i>
                 </div>
                 <div class="card_info-text">
-                  <p class="info_store">Jc barber and Beauty Supply</p>
+                  <p class="info_store">Jc barber & Beauty Supply</p>
                   <p class="info_address">Monday - Friday</p>
-                  <p class="info_address">8am - 4pm</p>
+                  <p class="info_address">8:30am - 4:30pm</p>
                   <p class="info_address"><span>407 704 7576</span></p>
                 </div>
               </div>
