--- a/index.html
+++ b/index.html
@@ -462,10 +462,9 @@
             </div>
 
             <div class="contacus_googlemap">
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3508.8756290780216!2d-81.41273517519947!3d28.42300942652989!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e77deafc08126f%3A0x34ed9ca7a2ac5855!2s9468%20American%20Eagle%20Way%2C%20Orlando%2C%20FL%2032837%2C%20EE.%20UU.!5e0!3m2!1ses!2ssv!4v1665521974240!5m2!1ses!2ssv"
-                width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3509.697447304803!2d-81.40626108459594!3d28.398204801397885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88dd8760f1255555%3A0x41735ffa5cca4c76!2s11601%20S%20Orange%20Blossom%20Trl%20%23103%2C%20Orlando%2C%20FL%2032837%2C%20EE.%20UU.!5e0!3m2!1ses!2ssv!4v1677508219063!5m2!1ses!2ssv" 
+              width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
           </div>
@@ -491,7 +490,7 @@
                   <i class="bi bi-whatsapp"></i>
                 </div>
                 <div class="card_info-text">
-                  <a class="info_address social_link" href="https://api.whatsapp.com/send?phone=13214422937&text=Hola, deseo informacion!" target="_blank">Hablanos por whatsapp</a>
+                  <a class="info_address social_link" href="https://api.whatsapp.com/send?phone=13214422937&text=Hola, deseo informacion!" target="_blank">Talk To Us On Whatsapp</a>
                 </div>
               </div>
 
